<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">دعائى</string>
    <string name="Doae">دعائى</string>
    <string name="gift">الإ هداء</string>
    <string name="home">الر ئيسية</string>
    <string name="main_menu">القائمة الرئيسية</string>
    <string name="back">العودة</string>
    <string name="contect_us">التواصل معنا</string>
    <string name="visit">زيارة القبور</string>
    <string name="charity">التبرعات \n والصدقات</string>
    <string name="start">البداية</string>
    <string name="dua_visit">دعاء زيارة القبور</string>
    <string name="al_fatihah">سورة الفاتحة</string>
    <string name="alqadr">سورة القدر</string>
    <string name="ELKHLAS">سورة الإخلاص</string>
    <string name="ALMUEAWIDHATAYN">المعوذتين</string>
    <string name="AYATELKORSE">أية الكرسى</string>
    <string name="yasin">سورة يس</string>
    <string name="elmolk">سورة الملك</string>
    <string name="rahman">سورة الرحمن</string>
    <string name="qadah">دعاء القدح</string>
    <string name="ashora">زيارة عاشوراء</string>
    <string name="wareth">زيارة وارث</string>

    <string name="first">
        إِنَّا أَنْزَلْنَاهُ فِي لَيْلَةِ الْقَدْرِ   ١   وَمَا أَدْرَاكَ مَا لَيْلَةُ الْقَدْرِ   ٢   لَيْلَةُ الْقَدْرِ خَيْرٌ مِنْ أَلْفِ شَهْرٍ   ٣   تَنَزَّلُ الْمَلَائِكَةُ وَالرُّوحُ فِيهَا بِإِذْنِ رَبِّهِمْ مِنْ كُلِّ أَمْرٍ   ٤   سَلَامٌ هِيَ حَتَّىٰ مَطْلَعِ الْفَجْرِ   ٥ 
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>