<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".second_activity.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/image"
        android:src="@drawable/header"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        style="@style/first_TextViewStyle"
        android:gravity="center"
        android:textSize="@dimen/_20sdp"
        android:text="@string/main_menu"
        android:id="@+id/menu"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/text_color"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/secondImage"
        android:src="@drawable/qran"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/menu"
        android:layout_height="@dimen/_100sdp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTitles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondImage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/contact_us"
            style="@style/first_TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_10sdp"
            android:text="@string/contect_us"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/back"
            style="@style/first_TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/_10sdp"
            android:text="@string/back"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>